fix: color picker button in settings

--- a/html/index.html
+++ b/html/index.html
@@ -76,10 +76,12 @@
                         <div class="setting" id="setting-color-primary" style="align-items: center">
                             <div>Primary color</div>
                             <input type="color" id="input-color-primary" value="#ffffff" />
+                            <span id="color-picker-button-primary" class="color-picker-button"></span>
                         </div>
                         <div class="setting" id="setting-color-accent" style="align-items: center">
                             <div>Accent color</div>
                             <input type="color" id="input-color-accent" value="#ffffff" />
+                            <span id="color-picker-button-accent" class="color-picker-button"></span>
                         </div>
                         <div
                             class="setting"
@@ -88,6 +90,7 @@
                         >
                             <div>Background color</div>
                             <input type="color" id="input-color-background" value="#111111" />
+                            <span id="color-picker-button-background" class="color-picker-button"></span>
                         </div>
                     </form>
                 </div>
